<resources>
    <string name="app_name">TasteBuds</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_review">Review</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to home -->
    <string name="trending">Trending In Swansea</string>

    <!-- Strings related to restaurants -->
    <string name="turtle_bay">Turtle Bay Swansea</string>
    <string name="tacobell">Taco Bell</string>
    <string name="banana_leaf">Banana Leaf</string>
    <string name="fave_chicken">Favorite Chicken Swansea</string>
    <string name="dominos">Dominos Pizza</string>
    <string name="brewdog">BrewDog Swansea</string>
    <string name="monnis">Monnis Fish Bar</string>
    <string name="kaspas">Kaspas Desserts Swansea</string>
    <string name="five_guys">Five Guys</string>
    <string name="nandos">Nandos Swansea</string>
    <string name="tgi_fridays">TGI Fridays - Swansea</string>
    <string name="msg">are the best!</string>

    <!-- Strings related to review -->
    <string name="need_login">Sorry you need to be logged in to view this</string>
    <string name="reviews">Draft Reviews</string>

    <string name="new_review">New Review</string>
    <string name="restaurant_details">Restaurant</string>
    <string name="restaurant">Restaurant Name</string>
    <string name="restaurant_location">Restaurant Location</string>

    <string name="review_details">Review</string>
    <string name="review_title">Review Title</string>
    <string name="pics">Add Photos</string>
    <string name="review_body">Review</string>
    <string name="save">Save</string>
    <string name="submit">Submit Review</string>

    <string name="review_success">Successfully submitted review</string>
    <string name="review_fail">Review incomplete so cannot be submitted</string>
    <string name="save_review">Successfully saved review</string>

    <!-- Strings related to login -->
    <string name="go_to_account">Go To Account</string>
    <string name="login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="no_account">Don\'t have an account? </string>
    <string name="sign_up_no_u">Sign Up</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="sign_in"><u>Login</u></string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="have_account">Already have an account? </string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Couldn't log you in"</string>
    <string name="register_failed">"Couldn't sign you up"</string>
    <string name="register_success">Successfully created</string>

    <!-- Strings related to register -->
    <string name="password_too_short">Password must be at least 8 characters</string>
    <string name="password_no_match">"Password doesn't match"</string>
    <string name="empty_email">"Please enter a valid email"</string>
    <string name="empty_password">"Please enter a password"</string>
    <string name="prompt_displayName">Display Name</string>
    <string name="prompt_firstName">"First Name"</string>
    <string name="prompt_lastName">"Last Name"</string>
</resources>